--- a/testnew.css
+++ b/testnew.css
@@ -6,8 +6,8 @@ html, body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
-
 }
+
 
 body {
 	background-color: #e3e3e3;
@@ -51,6 +51,17 @@ h2 {
 	
 }
 
+@media screen and (max-width: 1400px), (min-width: 1500px) {
+	p {
+		color: green; 
+	}
+ 	
+ 	.sidebar {
+ 		visibility: hidden;
+ 	}
+}
+	
+
 .wrapper {
 
 }
@@ -59,6 +70,7 @@ h2 {
 
 .header {
 	height: 396px;
+
 }
 
 .header-top {
@@ -164,10 +176,9 @@ h2 {
 }
 
 .main {
-	/* background: #506464; */
 	width: 57.6%;
 	display: inline-block;
-	margin-left: 15%;
+	margin-left: 7.5%;
 	padding-top: 86px;
 }
 
@@ -238,11 +249,13 @@ h2 {
 			/* SIDEBAR */
 
 .sidebar {
-	width: 23%; 
+	width: 23%;
 	display: inline-block;
 	margin-left: 3.5%;	
-	position: relative;
+	position: relative; 
 	bottom: 1536px;
+	max-width: 100%;
+	
 }  
 
 .sidebar-search {
@@ -258,14 +271,14 @@ h2 {
 	min-height: 100%;
 	font-family: 'Crimson Text';
 	font-style: italic;
-	margin-left: 14px;
+	padding-left: 14px;
 	font-size: 90%;
 }
 
 .search-button {
 	border: none;
 	background: #e3e3e3;
-	margin-left: 114px;
+	margin-left: 114px; 
 }
 
 .sidebar .fa-search {
@@ -283,6 +296,7 @@ h2 {
 
 .sidebar-posts {
 	padding-bottom: 30px;
+
 }
 
 .sidebar-posts-container {
@@ -379,6 +393,7 @@ h2 {
 	background-image: url(img/bg-footer.png);
 	height: 645px;	
 	color: #fff;
+
 }
 
 .footer a {
@@ -393,13 +408,14 @@ h2 {
 	width: 30%;
 	display: inline-block;
 	margin-top: 58px;
+	padding-left: 7.5%;
 }
 
 .footer-container-right {
-	width: 69%;
+	width: 61%;
 	display: inline-block;
 	position: relative;
-	bottom: 106px;
+	bottom: 114px;
 }
 
 .footer-underline {
