--- a/testnew.css
+++ b/testnew.css
@@ -52,8 +52,7 @@ h2 {
 }
 
 
-
-@media screen and (max-width: 1000px), (min-width: ) {
+@media screen and (max-width: 960px), (min-width: ) {
 
 .main-content .sidebar {
  	display: none;	
@@ -63,8 +62,44 @@ h2 {
 	width: 90%;
 	} 	
 
+.header-bg-container .header-bg-name {
+	font-size: 150%;
+	}
+
+.footer-container-left {
+	min-width: 80%; 
+}
 
 }	 
+
+@media screen and (max-width: 960px ) {
+
+.media-menu {
+	width: 50px;
+	height: 50px;
+	background: #000;
+	text-align: center;
+}
+
+.media-menu a i {
+	color: #fff;
+	margin-top: 16%;
+}
+
+.media-menu:hover {
+	
+}
+
+}
+
+@media screen and (min-width: 1000px) {
+
+	.media-menu a i {
+		display: none;
+	}
+}
+
+
 
 .wrapper {
 	width: 100%;
@@ -76,7 +111,7 @@ h2 {
 .header {
 	height: 396px;
 }
-
+ 
 .header-top {
 	font-family: 'Montserrat';
 	background-color: #ffffff;
@@ -433,7 +468,7 @@ h2 {
 	margin-top: 58px;
 	padding-left: 3%;
 	display: inline-block;
-	margin-right: 33px;
+	margin-right: 3%;
 }
 
 .footer-container-right {
@@ -541,3 +576,5 @@ h2 {
 	color: #fff;
 	display: block;
 }
+
+
