--- a/testnew.css
+++ b/testnew.css
@@ -52,7 +52,7 @@ h2 {
 }
 
 
-@media screen and (max-width: ), (min-width: 960px ) {
+@media screen and (max-width: 1000px), (min-width: ) {
 
 .main-content .sidebar {
  	display: none;	
@@ -72,7 +72,7 @@ h2 {
 
 }	 
 
-@media screen and (max-width: ), (min-width: 960px) {
+@media screen and (max-width: 1000px), (min-width: ) {
 	.main-content .main {
 	margin-left: 5%;
 	}
