--- a/testnew.css
+++ b/testnew.css
@@ -52,7 +52,7 @@ h2 {
 }
 
 
-@media screen and (max-width: 1024px), (min-width: ) {
+@media screen and (max-width: 1024px) {
 
 .main-content .sidebar {
  	display: none;	
@@ -72,7 +72,7 @@ h2 {
 
 }	 
 
-@media screen and (max-width: 320px), (min-width:) {
+@media screen and (max-width: 320px) {
 	.main-content .main {
 	margin-left: 5%;
 	}
