--- a/testnew.css
+++ b/testnew.css
@@ -63,7 +63,7 @@ h2 {
 	} 	
 
 .header-bg-container .header-bg-name {
-	color: red;
+	
 	}
 
 .footer-container-left {
@@ -72,7 +72,7 @@ h2 {
 
 }	 
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1024pxpx) {
 	.main-content .main {
 	margin-left: 5%;
 	}
