--- a/testnew.css
+++ b/testnew.css
@@ -72,7 +72,7 @@ h2 {
 
 }	 
 
-@media screen and (max-width: 1024pxpx) {
+@media screen and (max-width: 1024px) {
 	.main-content .main {
 	margin-left: 5%;
 	}
